--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,19 @@
 Leiningen NEWS -- history of user-visible changes
 
+= 1.2.1 / ???
+
+* Improve Windows support. (Laurence Hygate)
+
+* Detect download failures in self-install.
+
+* Add resources and test-resources paths to pom. (Brian Weber)
+
+* Fix bug causing crash if OS name wasn't recognized.
+
+* Improve AOT staleness determination heuristic.
+
+* Fix bug where uberjar left out dependencies for non-AOT'd projects. (Alex Ott)
+
 = 1.2.0 / 2010-07-18
 
 * Don't enable repl rlwrap when unnecessary. (dumb terms, Emacs, etc.)
