--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,13 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.3.0 / ???
 
-* Improve Windows support. (Laurence Hygate)
+* Add test! task that cleans and does deps before testing.
+
+* Add interactive task for entering tasks in a shell-like environment.
+
+* Work around argument escaping bug on Windows. (Laurence Hygate)
+
+* Require hooks to be specified in project.clj.
 
 * Detect download failures in self-install.
 
