--- a/todo.org
+++ b/todo.org
@@ -5,20 +5,25 @@
 
 Leiningen TODOs
 
-* For 1.3.0 or higher
-** TODO user-level plugin installation and activation
-** TODO user-level config file
-** TODO re-compile all deps with current clojure version
+* For 1.4.0 or later
 ** TODO lein install $PROJECT (works outside project root)
    Possibly take some of this from cljr?
+** TODO write shell wrappers on install
 ** TODO lein add $DEPENDENCY (inserts it into :dependencies in project.clj)
-** TODO multitest task: test with various dependency sets (plugin?)
 ** TODO classifiers for specifying what clojure version to use?
 ** TODO test classification using metadata; run a subset of tests
 ** TODO a list of dirs to include in the jar when building
+** TODO re-compile all deps with current clojure version
 ** TODO set arbitrary jar metadata
 ** TODO specify min. lein version in project.clj
-** TODO write shell wrappers on install
+* For 1.3.0
+** TODO errors in read-project should show filename
+** TODO user-level plugin installation and activation
+** TODO user-level config file (with hook list)
+** TODO get no-project-needed from arglist
+** TODO argument chaining
+** DONE interactive task
+** DONE resources in generated pom
 * For 1.2.0
 ** DONE Fix self-build clean problem
 ** DONE Don't catch reader exceptions unless they are from ^D
