--- a/todo.org
+++ b/todo.org
@@ -11,12 +11,13 @@ Leiningen TODOs
 ** TODO test classification using metadata; run a subset of tests
 ** TODO a list of dirs to include in the jar when building
 ** TODO re-compile all deps with current clojure version
-** TODO set arbitrary jar metadata
 ** TODO specify min. lein version in project.clj
 * For 1.3.0
 ** TODO lein install $PROJECT (works outside project root)
    Possibly take some of this from cljr?
 ** TODO write shell wrappers on install
+** TODO include shell wrapper in jar file from template
+** DONE set arbitrary jar metadata
 ** DONE errors in read-project should show filename
 ** DONE user-level plugin installation and activation
 ** DONE user-level config file (with hook list)
