--- a/todo.org
+++ b/todo.org
@@ -13,10 +13,10 @@ Leiningen TODOs
 ** TODO re-compile all deps with current clojure version
 ** TODO specify min. lein version in project.clj
 * For 1.3.0
-** TODO lein install $PROJECT (works outside project root)
+** DONE lein install $PROJECT (works outside project root)
    Possibly take some of this from cljr?
-** TODO write shell wrappers on install
-** TODO include shell wrapper in jar file from template
+** DONE write shell wrappers on install
+** DONE include shell wrapper in jar file from template
 ** DONE set arbitrary jar metadata
 ** DONE errors in read-project should show filename
 ** DONE user-level plugin installation and activation
