--- a/todo.org
+++ b/todo.org
@@ -6,6 +6,7 @@
 Leiningen TODOs
 
 * For 1.4.0 or later
+** TODO add option to use ~/.m2-based classpath instead of copying to lib/?
 ** TODO lein add $DEPENDENCY (inserts it into :dependencies in project.clj)
 ** TODO classifiers for specifying what clojure version to use?
 ** TODO test classification using metadata; run a subset of tests
@@ -13,6 +14,7 @@ Leiningen TODOs
 ** TODO re-compile all deps with current clojure version
 ** TODO specify min. lein version in project.clj
 * For 1.3.0
+** DONE :omit-source
 ** DONE lein install $PROJECT (works outside project root)
    Possibly take some of this from cljr?
 ** DONE write shell wrappers on install
