Documentation updates for 1.3.0.

--- a/todo.org
+++ b/todo.org
@@ -7,6 +7,7 @@ Leiningen TODOs
 
 * For 1.4.0 or later
 ** TODO add option to use ~/.m2-based classpath instead of copying to lib/?
+** TODO plugin task for managing/upgrading plugins
 ** TODO lein add $DEPENDENCY (inserts it into :dependencies in project.clj)
 ** TODO shell wrappers should support multiple versions
 ** TODO classifiers for specifying what clojure version to use?
