--- a/todo.org
+++ b/todo.org
@@ -14,8 +14,8 @@ Leiningen TODOs
 ** TODO test classification using metadata; run a subset of tests
 ** TODO a list of dirs to include in the jar when building
 ** TODO re-compile all deps with current clojure version
-** TODO specify min. lein version in project.clj
 * For 1.3.0
+** DONE specify min. lein version in project.clj
 ** DONE :omit-source
 ** DONE lein install $PROJECT (works outside project root)
    Possibly take some of this from cljr?
