--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.3.1 / ???
 
+* Allow dependency type to be specified in project.clj. (John Sanda)
+
 * Stop jar/uberjar task if compile fails. (Alan Dipert)
 
 * Support :min-lein-version in project.clj so if a project uses newer Leiningen
