--- a/todo.org
+++ b/todo.org
@@ -14,6 +14,7 @@ Leiningen TODOs
 ** TODO test classification using metadata; run a subset of tests
 ** TODO a list of dirs to include in the jar when building
 ** TODO re-compile all deps with current clojure version
+** TODO spin lancet off into its own dependency
 * For 1.3.0
 ** DONE specify min. lein version in project.clj
 ** DONE :omit-source
