--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Leiningen NEWS -- history of user-visible changes
 
-= 1.3.1 / ???
+= 1.3.1 / 2010-09-07
+
+* Support regex matching in :aot list. (Alex Ott)
 
 * Run self-install automatically if uberjar is missing.
 
