Move some TODOs to 2.0. Let's not get ahead of ourselves.

--- a/todo.org
+++ b/todo.org
@@ -21,11 +21,32 @@ See also http://github.com/technomancy/leiningen/issues
    It looks like it would be easy to stop copying things into lib/ and
    just use Maven's notion of the project's dependencies to construct a
    classpath that references jars straight from ~/.m2.
+** TODO spin lancet off into its own dependency
+   I've never felt comfortable about simply keeping it inline. On the
+   other hand if we quit using ant then we can skip this.
+   Needs to not be in the default package!
+** TODO shell wrappers should support multiple versions
+   We could write out a different "foo-$VERSION" shell wrapper for each
+   version of a project that gets installed and then have the plain
+   "foo" script look for a $VERSION env var if it's set, and if not
+   just fall back to the latest.
+** TODO classifiers for specifying what clojure version to use?
+   As more versions of Clojure start to exist, libraries may want to
+   publish different branches that target different versions of
+   Clojure itself. Classifiers may be the way to separate these out?
+** TODO a list of dirs to include in the jar when building
+   Some people have requested this.
+** TODO re-compile all deps with current clojure version
+   Another thing that's going to start becoming more important as more
+   Clojure versions are introduced.
+** TODO fail gracefully when run without an Internet connection (Issue #100)
+** TODO improve test coverage
+** TODO merge push task based on clj-ssh
+   lein-clojars task doesn't support DSA keys
 * For 1.4
 ** TODO explain unquote in sample.project.clj
 ** TODO clear out non-transitive .class files after AOT
    Luc Prefontaine has code for this.
-** TODO merge push task based on clj-ssh
 ** TODO plugin task for managing/upgrading plugins
    Manually copying jar files into ~/.lein/plugins is pretty
    lame. Let's get a task to handle this. It could be implemented as a
@@ -37,26 +58,6 @@ See also http://github.com/technomancy/leiningen/issues
    Leiningen itself.
 ** TODO merge lein-run task?
    Ditto; this is something useful that many projects need.
-** TODO classifiers for specifying what clojure version to use?
-   As more versions of Clojure start to exist, libraries may want to
-   publish different branches that target different versions of
-   Clojure itself. Classifiers may be the way to separate these out?
-** TODO a list of dirs to include in the jar when building
-   Some people have requested this.
-** TODO re-compile all deps with current clojure version
-   Another thing that's going to start becoming more important as more
-   Clojure versions are introduced.
-** TODO spin lancet off into its own dependency
-   I've never felt comfortable about simply keeping it inline. On the
-   other hand if we quit using ant then we can skip this.
-   Needs to not be in the default package!
-** TODO shell wrappers should support multiple versions
-   We could write out a different "foo-$VERSION" shell wrapper for each
-   version of a project that gets installed and then have the plain
-   "foo" script look for a $VERSION env var if it's set, and if not
-   just fall back to the latest.
-** TODO fail gracefully when run without an Internet connection (Issue #100)
-** TODO improve test coverage
 ** DONE expose original pwd as property
 ** DONE merge lein-javac task
    Also make the compile task run it where appropriate.
