--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Leiningen NEWS -- history of user-visible changes
 
-= 1.4.0 / 2010-??-??
+= 1.4.0 / 2010-11-??
+
+* Deprecated :namespaces and :test-resources-path in project.clj.
 
 * Delete non-project .class files after AOT compilation. (Luc Prefontaine)
 
