--- a/todo.org
+++ b/todo.org
@@ -51,8 +51,8 @@ See also http://github.com/technomancy/leiningen/issues
    the standard lucene index system that Maven repositories offer.
    This would also mean getting Clojars to produce those indices.
 * For 1.4
-** TODO :all and :none test-selectors built-in
 ** TODO :uberjar-exclusions?
+** DONE :all test-selector built-in
 ** DONE test selectors need to support things like constantly, complement
 ** DONE detect missing level of nesting in project.clj's deps/dev-deps
 ** DONE clear out non-transitive .class files after AOT
