Clean up a few bits of socket handling in repl and interactive tasks.

--- a/todo.org
+++ b/todo.org
@@ -51,6 +51,9 @@ See also http://github.com/technomancy/leiningen/issues
    the standard lucene index system that Maven repositories offer.
    This would also mean getting Clojars to produce those indices.
 * For 1.4
+** TODO investigate arity of lein-run
+** TODO socket timing issues with interactive tests
+** DONE connect to socket repl in interactive task
 ** DONE :uberjar-exclusions?
 ** DONE :all test-selector built-in
 ** DONE test selectors need to support things like constantly, complement
