--- a/todo.org
+++ b/todo.org
@@ -52,7 +52,7 @@ See also http://github.com/technomancy/leiningen/issues
    This would also mean getting Clojars to produce those indices.
 * For 1.4
 ** TODO investigate arity of lein-run
-** TODO socket timing issues with interactive tests
+** DONE socket timing issues with interactive tests
 ** DONE connect to socket repl in interactive task
 ** DONE :uberjar-exclusions?
 ** DONE :all test-selector built-in
