--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,22 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.4.0 / 2010-11-??
 
+* Keep project JVM running between task runs in interactive task.
+
+* Support :uberjar-exclusions as a seq of regexes in project.clj.
+
+* Support :repl-options in project.clj that get passed to clojure.main/repl.
+
+* Shell wrappers are installed on Windows. (Matjaz Gregoric)
+
+* Windows and Cygwin path fixes. (Matjaz Gregoric)
+
+* Solaris compatibility fixes. (Heinz Gies)
+
+* Deprecated :jar-dir in favour of :target-dir.
+
+* Deprecated unused eval-in-project arguments. (handler, skip-auto-compile)
+
 * Deprecated :namespaces and :test-resources-path in project.clj.
 
 * Delete non-project .class files after AOT compilation. (Luc Prefontaine)
