--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,21 @@
 Leiningen NEWS -- history of user-visible changes
 
+= 1.4.1 / 2010-12-16
+
+* Allow boosting :repl-retry-limit in project.clj for slow-starting projects.
+
+* Turn :clean-non-project-classes off by default.
+
+* Support :skip-aot metadata on :main in project.clj.
+
+* Alias :deps/:dev-deps to :dependencies/:dev-dependencies in project.clj.
+
+* Support setting clojure.debug property.
+
+* Don't allow stable versions to depend upon snapshots.
+
+* Fix exit code for chained tasks.
+
 = 1.4.0 / 2010-12-02
 
 * Support readme, tutorial, news, and copying in help task.
