--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 Leiningen NEWS -- history of user-visible changes
 
+= 1.4.2 / ???
+
+* Use JVM_OPTS environment variable instead of JAVA_OPTS, though the latter
+  is still supported for backwards-compatibility.
+
 = 1.4.1 / 2010-12-16
 
 * Allow boosting :repl-retry-limit in project.clj for slow-starting projects.
