--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.4.2 / ???
 
+* Allow a seq of regexes in :clean-non-project-classes for more flexibility.
+
+* Fix a bug where the first argument to run would be parsed wrong. (Alex Osborne)
+
 * Use JVM_OPTS environment variable instead of JAVA_OPTS, though the latter
   is still supported for backwards-compatibility.
 
