--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 Leiningen NEWS -- history of user-visible changes
 
-= 1.4.2 / ???
+= 1.4.2 / 2010-12-31
+
+* Fix a bug where init to eval-in-project was ignored in interactive task.
+
+* Fix a bug in path calculation for native dependencies. (wburke)
+
+* Fix a bug where built-in tasks shadowed plugins (javac, run).
 
 * Allow a seq of regexes in :clean-non-project-classes for more flexibility.
 
