--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,15 @@
 Leiningen NEWS -- history of user-visible changes
 
+= 1.5.0 / ???
+
+* Add deploy task.
+
+* Reload tests in interactive mode.
+
+* Make test! task accept namespace list as argument. (Joe Gallo)
+
+* Use current year in readme for project skeleton. (Joe Gallo)
+
 = 1.4.2 / 2010-12-31
 
 * Fix a bug where init to eval-in-project was ignored in interactive task.
