--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.5.0 / ???
 
+* Skip fetching dependencies when they haven't changed in project.clj
+  if :checksum-deps is set.
+
 * Add system property for $PROJECT.version.
 
 * Add deploy task.
