--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.5.0 / ???
 
+* Add pcmpl-lein.el for eshell completion.
+
 * Skip fetching dependencies when they haven't changed in project.clj
   if :checksum-deps is set.
 
